--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'SF Display', sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
 .App {
-  background-color: #2a2a2a;
+  background-color: #666;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,6 +20,16 @@
 
 .calculator {
   background-color: #000;
-  max-width: 414px;
-  max-height: 896px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 50px;
+}
+
+.interaction-container {
+  align-self: flex-end;
+  width: 100%;
 }
